# Trace_It

./: .gitignore  CMakeLists.txt  README.md
assets/: scene1.ppm
docs/: WriteUp for the assignment.txt
include/: camera.h  color.h  cuda_renderer.h  hittable.h  ray.h  scene.h  sphere.h  utils.h  vec3.h
src/: cuda_renderer.cu  main.cpp
